# HIPAA-2-vec

./: .gitignore  .mcp.json  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
data/: seed_glossary.yaml
src/hipaa_mcp/: boot.py  chunking.py  citations.py  cli.py  config.py  glossary.py  ingest.py  llm.py  models.py  retrieval.py  server.py
tests/: test_chunking.py  test_citations.py  test_glossary.py  test_integration.py  test_mcp_tools.py  test_retrieval.py
